infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  auth
spec:
  selector:
    matchLabels:
      app: auth
  replicas: 1
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name:  auth
        image:  pdtg/ticketing-auth
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 350m
            memory: 350Mi
        ports:
        - containerPort:  3000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
  - name: auth
    protocol: TCP
    port: 3000
    targetPort: 3000
