infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  selector:
    matchLabels:
      app: client
  replicas: 1
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: pdtg/ticketing-client
          resources:
            requests:
              cpu: 300m
              memory: 300Mi
            limits:
              cpu: 500m
              memory: 700Mi
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
  - name:  client
    port:  3000
    targetPort: 3000
    protocol: TCP
