infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  selector:
    matchLabels:
      app: tickets
  replicas: 1
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - image:  pdtg/ticketing-tickets
          name:  tickets
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 1400Mi
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  selector:
    app: tickets
  ports:
  - name: tickets
    port:  3000
    targetPort: 3000
    protocol: TCP
